[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/MetalDetector/Detector.png" type="Texture" id=1]
[ext_resource path="res://Src/MetalDetector/MetalDetector.gd" type="Script" id=2]
[ext_resource path="res://Assets/Objects/AlarmLight.png" type="Texture" id=3]
[ext_resource path="res://Assets/SFX/laser_detect.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "alarm"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 18 )

[node name="MetalDetector" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -40 )
z_index = 51
texture = ExtResource( 1 )
centered = false
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/alarm = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, -18 )
shape = SubResource( 3 )

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 4, -36 )
texture = ExtResource( 3 )
texture_scale = 2.0
color = Color( 0.788235, 0.188235, 0.219608, 1 )

[node name="LaserDetect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
attenuation = 2.0
bus = "Sound"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
